html,css,js,img수정
오후5시 수정
이미지2배짜리 정리

--- a/assets/css/_mixin.scss
+++ b/assets/css/_mixin.scss
@@ -63,3 +63,9 @@
     -o-animation:$value;
     animation:$value;
 }
+/* @mixin keyframes($name,$value...){
+    -webkit-@keyframes $name {$value};
+    -moz-@keyframes $name {$value};
+    -o-@keyframes $name {$value};
+    @keyframes $name {$value};
+} */
