--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
+/* @mixin keyframes($name,$value...){
+    -webkit-@keyframes $name {$value};
+    -moz-@keyframes $name {$value};
+    -o-@keyframes $name {$value};
+    @keyframes $name {$value};
+} */
 #cnt1 {
   position: relative;
   background-color: #F4F4F4;
