--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/* @mixin keyframes($name,$value...){
+    -webkit-@keyframes $name {$value};
+    -moz-@keyframes $name {$value};
+    -o-@keyframes $name {$value};
+    @keyframes $name {$value};
+} */
 #me .tit, #skill .tit {
   font-family: hopang;
   font-size: 100px; }
@@ -30,7 +36,23 @@
   height: 647px;
   background: #FB511D;
   z-index: 1; }
-  #me .img_wrap img, #me .img_wrap button, #me .img_wrap .q {
+  #me .img_wrap.on {
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -o-animation: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    left: 50%; }
+  #me .img_wrap.on::after {
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: 0;
+    background: #FB511D;
+    opacity: 98%;
+    width: 100%;
+    height: calc(100% + 30px); }
+  #me .img_wrap img, #me .img_wrap button {
     -webkit-background-size: cover !important;
     -moz-background-size: cover !important;
     background-size: cover !important; }
@@ -41,12 +63,12 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     position: absolute;
-    top: 50%;
+    top: calc(50% - 15px);
     left: 50%;
     z-index: 10;
+    background: url("../images/icon/q_mark.svg") no-repeat;
     width: 86px;
-    height: 86px;
-    background: url("../assets/images/icon/q_mark.svg") no-repeat; }
+    height: 130.5px; }
   #me .img_wrap img, #me .img_wrap .smile {
     position: absolute; }
   #me .img_wrap > img {
@@ -55,13 +77,6 @@
     top: -30px;
     right: 0;
     background: no-repeat center; }
-    #me .img_wrap > img::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: #FB511D;
-      opacity: 98%; }
   #me .img_wrap .smile {
     background: url("../images/icon/smile_icon.svg") no-repeat; }
   #me .img_wrap .smile1 {
@@ -104,13 +119,6 @@
     height: 44px;
     top: 426px;
     left: 101px; }
-  #me .img_wrap.on {
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -o-animation: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    left: 50%; }
 #me .txt {
   position: absolute;
   top: 858px;
@@ -127,7 +135,7 @@
   position: absolute;
   width: 630px;
   right: 0;
-  top: 454px;
+  top: 310px;
   line-height: 32px; }
   #me .text p {
     position: relative;
@@ -375,7 +383,8 @@
   background: #FB511D;
   font-size: 16px;
   text-align: center;
-  line-height: 60px; }
+  line-height: 60px;
+  cursor: pointer; }
 #skill .guide, #skill .keyboard div {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -395,6 +404,11 @@
     border: 1px solid #eee;
     width: 60px;
     height: 60px; }
+    #skill .guide .keyboard div.click {
+      -webkit-animation: flash 1s 0.8s infinite alternate;
+      -moz-animation: flash 1s 0.8s infinite alternate;
+      -o-animation: flash 1s 0.8s infinite alternate;
+      animation: flash 1s 0.8s infinite alternate; }
   #skill .guide .keyboard img {
     display: block;
     width: 26px;
@@ -443,110 +457,114 @@
     font-family: hopang;
     margin-top: 20px; }
 
-#projectCnt .tit {
-  font-family: NtSnasKR;
-  font-size: 36px; }
-#projectCnt .subtit {
-  font-size: 30px; }
-#projectCnt .txt {
-  position: absolute;
-  top: 153px;
-  right: 0;
-  width: 482px;
-  background: gold;
-  text-align: right; }
-  #projectCnt .txt .page, #projectCnt .txt .text {
-    font-size: 22px; }
-  #projectCnt .txt .website, #projectCnt .txt .role {
-    font-size: 25px; }
-  #projectCnt .txt .page {
-    margin: 60px 0 39px; }
-  #projectCnt .txt .website {
-    margin-bottom: 10px; }
-  #projectCnt .txt .text {
-    line-height: 2;
-    margin-top: 180px; }
-#projectCnt .go_btn {
-  position: absolute;
-  right: 0;
-  top: 760px; }
-  #projectCnt .go_btn li {
-    float: left; }
-  #projectCnt .go_btn a {
-    -webkit-background-size: cover !important;
-    -moz-background-size: cover !important;
-    background-size: cover !important;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    display: inline-block;
-    font-size: 15px;
-    width: 131px;
-    height: 56px; }
-  #projectCnt .go_btn .sitego {
-    color: #ffffff;
-    background: url("../images/icon/sitego.svg") no-repeat;
-    padding: 18px 0 0 12px;
-    margin-right: 69px; }
-  #projectCnt .go_btn .linkgo {
-    color: #FB511D;
-    background: url("../images/icon/infogo.svg") no-repeat;
-    padding: 18px 0 0 19px; }
-#projectCnt .img_wrap {
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -o-animation: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  background: purple;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  text-align: center;
-  width: 778px;
-  height: 507px; }
-  #projectCnt .img_wrap .img {
+#projectCnt {
+  position: relative;
+  height: 2040px; }
+  #projectCnt .tit {
+    font-family: NtSnasKR;
+    font-size: 36px; }
+  #projectCnt .subtit {
+    font-size: 30px; }
+  #projectCnt .txt {
     position: absolute;
-    overflow: hidden;
-    left: 0;
-    bottom: 0; }
-  #projectCnt .img_wrap .controller {
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -o-animation: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+    top: 153px;
+    right: 0;
+    width: 482px;
+    text-align: right; }
+    #projectCnt .txt .page, #projectCnt .txt .text {
+      font-size: 22px; }
+    #projectCnt .txt .website, #projectCnt .txt .role {
+      font-size: 25px; }
+    #projectCnt .txt .page {
+      margin: 60px 0 39px; }
+    #projectCnt .txt .website {
+      margin-bottom: 10px; }
+    #projectCnt .txt .text {
+      line-height: 2;
+      margin-top: 180px; }
+  #projectCnt .go_btn {
     position: absolute;
-    top: 0;
-    left: 50%; }
-    #projectCnt .img_wrap .controller button {
-      position: relative;
-      font-size: 20px; }
-      #projectCnt .img_wrap .controller button::after {
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -o-animation: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        content: "";
-        position: absolute;
-        top: 50%; }
-    #projectCnt .img_wrap .controller .next::after {
+    right: 0;
+    top: 760px; }
+    #projectCnt .go_btn li {
+      float: left; }
+    #projectCnt .go_btn a {
       -webkit-background-size: cover !important;
       -moz-background-size: cover !important;
       background-size: cover !important;
-      right: -32px;
-      background: url("../images/icon/next.svg") no-repeat;
-      width: 27px;
-      height: 26px; }
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      display: inline-block;
+      font-size: 15px;
+      width: 131px;
+      height: 56px; }
+    #projectCnt .go_btn .sitego {
+      color: #ffffff;
+      background: url("../images/icon/sitego.svg") no-repeat;
+      padding: 18px 0 0 12px;
+      margin-right: 69px; }
+    #projectCnt .go_btn .linkgo {
+      color: #FB511D;
+      background: url("../images/icon/infogo.svg") no-repeat;
+      padding: 18px 0 0 19px; }
+  #projectCnt .img_wrap {
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-animation: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    text-align: center;
+    width: 778px;
+    height: 507px; }
+    #projectCnt .img_wrap .img {
+      position: absolute;
+      overflow: hidden;
+      left: 0;
+      bottom: 0; }
+    #projectCnt .img_wrap .controller {
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -o-animation: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+      position: absolute;
+      top: 0;
+      left: 50%; }
+      #projectCnt .img_wrap .controller button {
+        position: relative;
+        font-size: 20px; }
+        #projectCnt .img_wrap .controller button::after {
+          -webkit-transform: translateY(-50%);
+          -moz-transform: translateY(-50%);
+          -o-animation: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+          content: "";
+          position: absolute;
+          top: 50%; }
+      #projectCnt .img_wrap .controller .next::after {
+        -webkit-background-size: cover !important;
+        -moz-background-size: cover !important;
+        background-size: cover !important;
+        right: -32px;
+        background: url("../images/icon/next.svg") no-repeat;
+        width: 27px;
+        height: 26px; }
 
 #projectCnt .info .tit + p, #projectCnt .info .subtit, #projectCnt .info .color > strong, #projectCnt .info .color > p, #projectCnt .info .font > strong, #projectCnt .info .font > p {
   text-align: center; }
+#projectCnt .info .tit + p {
+  font-size: 20px; }
 #projectCnt .info .color > strong, #projectCnt .info .color > p, #projectCnt .info .font > strong, #projectCnt .info .font > p {
   color: #656565; }
 #projectCnt .info .color > strong, #projectCnt .info .font > strong {
   position: relative;
-  display: block; }
+  display: block;
+  font-weight: 400; }
 #projectCnt .info .color > strong::after, #projectCnt .info .font > strong::after {
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
@@ -565,21 +583,22 @@
 #projectCnt .info .design .color > p, #projectCnt .info .design .font > p {
   margin: 65px 0 41px; }
 #projectCnt .info .design .color ul {
-  background: gold;
   text-align: center;
-  height: 150px; }
+  height: 150px;
+  width: 520px;
+  margin: 0 auto; }
 #projectCnt .info .design .color li {
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
-  display: inline-block;
+  float: left;
   width: 150px;
   height: 150px;
   color: #ffffff;
   font-size: 30px;
   line-height: 150px; }
   #projectCnt .info .design .color li + li {
-    margin-left: 37px; }
+    margin-left: 35px; }
 #projectCnt .info .design .font .title, #projectCnt .info .design .font .f_name {
   font-size: 23px; }
 #projectCnt .info .design .font .f_name {
@@ -587,7 +606,8 @@
 #projectCnt .info .design .font .big, #projectCnt .info .design .font .small {
   font-weight: 700; }
 #projectCnt .info .design .font .big {
-  font-size: 65px; }
+  font-size: 65px;
+  margin: 20px 0; }
 #projectCnt .info .design .font .small {
   font-size: 55px; }
 #projectCnt .info .coding .subtit {
@@ -735,16 +755,24 @@
       height: 200px;
       background: #FCAE26; }
 
+.project {
+  position: absolute;
+  top: 1080px;
+  left: 0;
+  width: 100%;
+  height: 960px; }
+
+#what .w1400, #kids .w1400 {
+  height: 100%; }
+
 #jaenung, #jaenung_info {
   background: #F4F4F4; }
 
-#jaenung {
-  height: 928px; }
-  #jaenung .w1400 {
-    height: 100%; }
-  #jaenung .img_wrap .img {
-    width: 778px;
-    height: 389px; }
+#jaenung .w1400 {
+  height: 100%; }
+#jaenung .img_wrap .img {
+  width: 778px;
+  height: 389px; }
 
 #jaenung_info {
   height: 2700px; }
@@ -765,11 +793,35 @@
     -moz-background: linear-gradient(0deg, #e60410 0%, #ff7800 100%);
     -o-background: linear-gradient(0deg, #e60410 0%, #ff7800 100%);
     background: linear-gradient(0deg, #e60410 0%, #ff7800 100%); }
+  #jaenung_info .design .font {
+    margin-top: 83px; }
+    #jaenung_info .design .font > div {
+      -webkit-display: flex;
+      -moz-display: flex;
+      -ms-display: flex;
+      display: flex;
+      justify-content: space-between;
+      text-align: center; }
+    #jaenung_info .design .font .left .big, #jaenung_info .design .font .left .small {
+      font-family: jalnan; }
+    #jaenung_info .design .font .left .big {
+      color: #e60417; }
+    #jaenung_info .design .font .left .small {
+      color: #E34B58; }
+    #jaenung_info .design .font .right .big, #jaenung_info .design .font .right .small {
+      font-family: NtSansKR; }
+    #jaenung_info .design .font .right .big {
+      color: #FF7800; }
+    #jaenung_info .design .font .right .small {
+      color: #F6AB74; }
   #jaenung_info .sitego {
     bottom: 200px; }
 
-#what, #what_info, #kids, #kids_info {
-  display: none; }
+#what, #what_info {
+  background: #222222; }
+
+#kids, #kids_info {
+  background: #0252A6; }
 
 @keyframes cubeS {
   0% {
@@ -845,5 +897,10 @@
     transform: translateX(-50px) translateY(180px) rotate(-180deg);
     width: 400px;
     height: 100px; } }
+@keyframes flash {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
