--- a/css/common.css
+++ b/css/common.css
@@ -136,6 +136,17 @@ body {
   height: 100%;
   background: #012875;
   text-align: center; }
+  .gnb .blob {
+    -webkit-animation: move 10s ease-in-out infinite;
+    -moz-animation: move 10s ease-in-out infinite;
+    -o-animation: move 10s ease-in-out infinite;
+    animation: move 10s ease-in-out infinite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 695px;
+    height: 613px;
+    z-index: -1; }
   .gnb li a {
     color: #ffffff;
     font-family: NtSansKR;
@@ -181,5 +192,154 @@ body {
       margin-left: 150px; }
     #footer .link a:hover, #footer .link a:focus {
       text-decoration: underline; }
+
+@-webkit-keyframes move {
+  0% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); }
+  38% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); } }
+@-moz-keyframes move {
+  0% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); }
+  38% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); } }
+@-o-keyframes move {
+  0% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); }
+  38% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); } }
+@keyframes move {
+  0% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); }
+  38% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40% {
+    -webkit-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -moz-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -o-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    -ms-transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80% {
+    -webkit-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -moz-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -o-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    -ms-transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% {
+    -webkit-transform: scale(1) translate(10px, -30px);
+    -moz-transform: scale(1) translate(10px, -30px);
+    -o-transform: scale(1) translate(10px, -30px);
+    -ms-transform: scale(1) translate(10px, -30px);
+    transform: scale(1) translate(10px, -30px); } }
 
 /*# sourceMappingURL=common.css.map */
