--- a/css/common.scss
+++ b/css/common.scss
@@ -46,6 +46,10 @@ body{
 }
 .gnb{
     width: 100%;height: 100%;background: $navy;text-align: center;
+    .blob{
+        @include animation(move 10s ease-in-out infinite);
+        position: absolute;top: 0;left: 0;width: 695px;height: 613px;z-index: -1;
+    }
     li a{
         color: #ffffff;font-family: NtSansKR;font-weight: 700;font-size: 100px;width: 100%;
         &:hover,&:focus{text-decoration: underline;}
@@ -72,4 +76,12 @@ body{
             &:hover,&:focus{text-decoration: underline;}
         }
     }
+}
+@include keyframes(move){
+    0%  {@include transform(scale(1) translate(10px, -30px));}
+    38% {@include transform(scale(0.8, 1) translate(80vw, 30vh) rotate(160deg));}
+    40% {@include transform(scale(0.8, 1) translate(80vw, 30vh) rotate(160deg));}
+    78% {@include transform(scale(1.3) translate(0vw, 50vh) rotate(-20deg));}
+    80% {@include transform(scale(1.3) translate(0vw, 50vh) rotate(-20deg));}
+    100%{@include transform(scale(1)   translate(10px, -30px));}
 }
