--- a/css/style.scss
+++ b/css/style.scss
@@ -4,19 +4,23 @@
 //about me
 #me .tit,#skill .tit{font-family: hopang;font-size: 100px;}
 #me{
+    position: relative;top: 96px;
     .bg img{
         @include animation(rotate 60s linear infinite);
+        position: absolute;
+        &:nth-child(1){top: 44px;left: -122px;width: 450px;height: 450px;}
+        &:nth-child(2){top: 1040px;right: 358px;width: 89px;height: 89px;}
     }
-    .tit{margin: 0 0 132px 10px;}
+    .tit{margin: 68px 0 132px 10px;}
     .click1,.click2{
         @include animation(updown 1.5s infinite);
-        font-size: 20px;color: $gray;transform-origin: 50% 50%;
+        position: absolute;top: 240px;font-size: 20px;color: $gray;transform-origin: 50% 50%;
     }
     .click1{
         @include transX-50;
-        position: absolute;top: 150px;left: 50%;
+        left: 50%;
     }
-    .click2{position: absolute;left: 340px;top: 150px;}
+    .click2{left: 340px;}
     
     .img_wrap{
         position: relative;width: 664px;height: 647px;background: $orange;z-index:1;
@@ -184,7 +188,7 @@
     }
     #jump{
         @include radius(100%);
-        position: absolute;width: 60px;height: 60px;left: 30px;bottom: 30px;background: $orange;font-size: 16px;text-align: center;line-height: 60px;cursor: pointer;
+        position: absolute;width: 60px;height: 60px;left: 30px;bottom: 30px;background: $orange;font-size: 16px;text-align: center;line-height: 60px;
     }
     .guide,.keyboard div{
         @include radius(5px);
